--- a/src/App.scss
+++ b/src/App.scss
@@ -3,9 +3,14 @@
   margin: 0;
 }
 
+$green-strong: rgb(14, 55, 28);
+$green-medium: rgb(31, 135, 66);
+$green-low: rgb(95, 197, 62);
+
 body{
   width: 100%;
   height: 100vh;
+  background-color: red;
 }
 
 nav{
@@ -61,6 +66,16 @@ border: solid salmon 1px;
         transform: scaleX(-1);
       }
     }
+    &>button{
+      color: $green-medium;
+      background-color: transparent;
+      border: $green-low 2px groove ;
+      border-radius: 10px;
+    }
+}
+
+button{
+  background-color: red;
 }
 
 
